# DaVinci

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  aws-infrastructure.drawio  docker-compose.yml  idea.md  index.html  package-lock.json  package.json  pyproject.toml  result.xml  run_example.sh  temp.md  vite.config.js  계획.md
.hypothesis/constants/: 04f71dd03e4ed075  0eaf2b1c8239b202  18464a1161d6475b  1865bb5a3b085b09  1f628fc556310bdb  23d124428c6e1b1a  241155f20a50df50  29dab65f1360731e  2c64daa430ce6f88  3626b6b3e57d8179  3ee85afe5c097d90  42205971aa09e30f  55b0c386f3f38422  57e578e75781f908  5e92b9dfefe00a97  6e49eed7000e0f6b  7c95fe27e28fb205  87ad1dc40f36b0d8  87d4e0dbcd4f1b05  91014025b98e2e41  (+16 more)
api/: __init__.py  main.py  routes.py  schemas.py
aws_resource_fetcher/: __init__.py  credentials.py  exceptions.py  models.py  resource_fetcher.py
aws_resource_fetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/: __init__.py  logging_config.py
drawio_generator/: __init__.py  exceptions.py  generator.py  layout.py  models.py  xml_builder.py
example-xml/: example1.drawio
examples/: README.md  generate_diagram.py
resource_graph_builder/: README.md  __init__.py  builder.py  exceptions.py  graph.py  models.py  parser.py
server/: index.js
src/: main.js
test-xml/: test-2.drawio
tests/: __init__.py  test_builder.py  test_credentials.py  test_e2e_integration.py  test_exceptions.py  test_graph.py  test_models.py  test_parser.py  test_phase1_to_phase2_integration.py  test_phase2_to_phase3_e2e.py  test_resource_fetcher.py
(+782 files in other folders)
